# ruka

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: benchmark.rs  client.rs  interview_bench.rs  throughput_bench.rs
src/: config.rs  error.rs  lib.rs  main.rs
src/broker/: handler.rs  mod.rs  writer.rs
src/network/: connection.rs  mod.rs  server.rs  zero_copy.rs
src/protocol/: codec.rs  frame.rs  mod.rs  request.rs  response.rs  types.rs
src/storage/: index.rs  mod.rs  partition.rs  segment.rs  topic.rs
tests/: protocol_tests.rs  recovery_tests.rs  storage_tests.rs  tcp_integration_tests.rs
